iframe issue on mobile

--- a/frontend/scss/partials/_content.scss
+++ b/frontend/scss/partials/_content.scss
@@ -117,3 +117,11 @@
 }
 
 @include content-styles;
+
+// -iFrame
+// ---------------------------------------
+@media (max-width: 768px) {
+  iframe {
+    display: none;
+  }
+}
